--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -1,22 +1,5 @@
-.bg {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: url("../../assets/img/background.png") no-repeat center/cover;
-}
-
-.bg::before {
-  content: "";
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 1);
-  position: absolute;
-  z-index: -1;
-}
-
 .container {
-  max-width: 500px;
+  width: 450px;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
