--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
 
 * {
+  box-sizing: border-box;
   font-family: 'Questrial', sans-serif;
   margin: 0;
   padding: 0;
