--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -5,11 +5,11 @@
   margin-inline: auto;
 }
 
-.box-shadow {
+.header-bg {
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.08);
 }
 
-header {
+.header {
   box-sizing: border-box;
   display: flex;
   flex-wrap: wrap;
@@ -38,7 +38,7 @@ header {
 }
 
 @media (max-width: 460px){
-  header {
+  .header {
     justify-content: center;
     row-gap: 10px;
   }
