--- a/src/pages/Feed/feed.css
+++ b/src/pages/Feed/feed.css
@@ -6,7 +6,7 @@
   padding: 40px 30px 30px;
   column-gap: 30px;
   row-gap: 15px;
-  border-bottom: 2px solid #C5C5C5;
+  border-bottom: 2px solid var(--p-details);
 }
 
 .post-area textarea {
@@ -20,4 +20,8 @@
   background-color: var(--s-color);
   padding-inline: 35px;
   justify-self: end;
+}
+
+.post-area button:hover {
+  background-color: #490977;
 }
