--- a/src/components/Containers/container-main.css
+++ b/src/components/Containers/container-main.css
@@ -1,6 +1,7 @@
 .container-m {
   max-width: 700px;
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
   margin-inline: auto;
   border-left: 1px solid #C5C5C5;
   border-right: 1px solid #C5C5C5;
